engine/crates/parser-openapi/src/tests/snapshots/parser_openapi__tests__all_of_schema_complex.snap
---
source: common/parser-openapi/src/lib.rs
expression: "build_registry(\"test_data/all-ofs-complex.json\", Format::Json,\n            metadata(Some(\"petstore\"))).unwrap().export_sdl(false)"
---
type Mutation {
	petstore: PetstoreMutation!
}
type PetstoreInsertOne {
	insertedId: String!
}
type PetstoreMutation {
	insertOne: PetstoreInsertOne
}
type Query {
}
schema {
	query: Query
	mutation: Mutation
}

