engine/crates/parser-openapi/src/tests/snapshots/parser_openapi__tests__impossible_unions.snap
---
source: common/parser-openapi/src/lib.rs
expression: "build_registry(\"test_data/impossible-unions.json\", Format::Json,\n        metadata(\"petstore\")).export_sdl(false)"
---
type Mutation {
	petstore: PetstoreMutation!
}
type PetstoreMutation {
	someOtherOperation(input: JSON!): JSON
}
type PetstorePet {
	inlineStringOrNumber: JSON
	id: Int
}
type PetstoreQuery {
	pets: [PetstorePet!]
}
type Query {
	petstore: PetstoreQuery!
}
schema {
	query: Query
	mutation: Mutation
}

